# snotel-mcp-server

./: README.md  pyproject.toml  requirements.txt  snotel-mcp.sh  test_fastmcp.py
examples/: example_usage.py
src/snotel_mcp_server/: __init__.py  __main__.py
tests/: test_tools.py
